# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
### Fixed

## [12.63.1 - 12.63.6] -- 2023-06-01
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.62.0] -- 2023-05-25
* Reihenfolge der `Setup.xml` Aufrufe wird nun mittels eines Graphen ermittelt, 3rd Party Libraries werden ignoriert.
* Eventhandling von Ncore für Extensions über `aero.minova.service.event.dispatcher` bereitstellen.
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.61.3] -- 2023-05-23
* Release Workflow korrigieren, so dass DOCKERFILE wieder auf Docker.io gepushed wird

## [12.61.2] -- 2023-05-23
* PasswordEncoderExtension entfernen, Passwort schon im Helper verschlüsseln
* Update auf SpringBoot 3.1.0.
* Bei View-Anfragen die Zeit von Instants und LocalDates mit beachten
* Für Azure Authentifiezierung fehlende Lib hinzufügen

## [12.61.1] -- 2023-05-12
* Fehler NACH Verarbeiten von XProcedures korrekt zurückgeben
* Autocommit per default auf `false` stellen

## [12.61.0] -- 2023-05-11
* AuthorizationController zu AuthorizationService umbenennen, da es kein Controller ist.

## [12.60.2] -- 2023-05-10
* Update auf SpringBoot 3.0.6.
* KeyText in xtcasUser von 10 auf 50 Zeichen verlängert

## [12.60.1] -- 2023-04-27
* Konfiguration der DataSource SpringBoot überlassen
* Verwaltung der JDBC Connections HikariCP überlassen

## [12.60.0] -- 2023-04-21
* Update auf SpringBoot 3.0.5.
* Korrektur der Connectionfreigabe.
* AuthorizationTest ausbessern (Tabelle leeren, damit andere Tests nicht das Ergebnis beeinflussen)
* `aero_minova_database_` properties entfernen (sind durch `spring.datasource.` abgedeckt)
* Fehlermeldung bei Laden von Privilegien verbessern

## [12.59.1] -- 2023-04-04
* Update auf SpringBoot 3.0.4.

* Feld ModulName in MDI-Maske hinzugefügt.