@@ -5,6 +5,7 @@ Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog
 
 ## [UNRELEASED] -- XXXX-XX-XX
 ### Fixed
+* Abschneiden von Daten beim Setup direkt in der Methode processSqlProcedureRequest erlauben
 
 ## [12.63.1 - 12.63.6] -- 2023-06-01
 * Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)
